# Stlrs

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  main.cpp
backend/data/: fisheye0.txt
front-end/: constants.py  main.py  road.py  settlement.py  tile.py  track_talker.py
front-end/media/: tiles.xcf
other/: magnet cover - Part Studio 1.stl
